--- a/.static/classic.css
+++ b/.static/classic.css
@@ -294,7 +294,7 @@ pre {
     border-right: none;
 }
 
-tt {
+tt, code {
     background-color: #ecf0f3;
     padding: 0 1px 0 1px;
     font-size: 0.95em;
@@ -304,11 +304,11 @@ th {
     background-color: #ede;
 }
 
-.warning tt {
+.warning tt, .warning code {
     background: #efc2c2;
 }
 
-.note tt {
+.note tt, .note code {
     background: #d6d6d6;
 }
 
