Done updating the theme and configuration.
Still about 12 pages need urgent work (before 12th of May).

--- a/.static/basic.css
+++ b/.static/basic.css
@@ -17,9 +17,10 @@ div.clearer {
     clear: both;
 }
 
-div.body {
+/* FIXME ? */
+/*div.body {
     margin-top: 35px;
-}
+}*/
 
 /* -- href with extra properties -------------------------------------------- */
 
