--- a/.static/forkit.css
+++ b/.static/forkit.css
@@ -10,7 +10,7 @@
 }
 .forkit-curtain {
 	text-align: center;
-	background: #3B5998; /*rgba( 0, 0, 0, 0.8 );*/
+	background: #3B5998;
 	padding-top: 10%;
 }
 .forkit-curtain  .close-button {
@@ -30,9 +30,9 @@
 	line-height: 30px;
 	box-shadow: 0px 0px 10px rgba( 0, 0, 0, 0.4 );
 	-webkit-transform-origin: 15px 0px;
-	-moz-transform-origin: 15px 0px;
-	-ms-transform-origin: 15px 0px;
-	-o-transform-origin: 15px 0px;
+	   -moz-transform-origin: 15px 0px;
+	    -ms-transform-origin: 15px 0px;
+	     -o-transform-origin: 15px 0px;
 	transform-origin: 15px 0px;
 }
 .forkit .tag:after {
@@ -54,9 +54,9 @@
 	background: rgba( 255, 255, 255, 0.7 );
 	box-shadow: 0px 0px 10px rgba( 0, 0, 0, 0.4 );
 	-webkit-transform-origin: 0px 0px;
-	-moz-transform-origin: 0px 0px;
-	-ms-transform-origin: 0px 0px;
-	-o-transform-origin: 0px 0px;
+	   -moz-transform-origin: 0px 0px;
+	    -ms-transform-origin: 0px 0px;
+	     -o-transform-origin: 0px 0px;
 	transform-origin: 0px 0px;
 }
 .forkit-curtain {
@@ -69,7 +69,7 @@
 @media (max-width: 680px){
     div.forkit-body, a.forkit {
         display: none;
-        visibility: hidden; 
+        visibility: hidden;
     }
 }
 /* Fin BETA responsive */
