Added +10 px on top for small screens (improved style for mobile).

--- a/.static/classic.css
+++ b/.static/classic.css
@@ -17,12 +17,12 @@
 	font-size: 100%;
 }*/
 
-@import url("basic.css");
+@import url("basic.css");  /* FIXME remove this ? */
 
 /* -- page layout ----------------------------------------------------------- */
 
 body {
-    overflow-x: hidden; /* FIXME? */
+    overflow-x: hidden; /* XXX if issue, remove */
     font-family: sans-serif;
     font-size: 100%;
     background-color: #351642;
@@ -45,11 +45,11 @@ div.documentwrapper {
 
 div.bodywrapper {
     margin: 0 0 0 230px;  /* Disable if using meny */
-    /*margin: -20px 0 0 230px; FIXME? */
+    /*margin: -20px 0 0 230px; XXX */
 }
 
 div.body {
-    overflow-x: auto !important; /* FIXME? */
+    overflow-x: auto !important; /* XXX */
     background-color: white;
     color: black;
     padding: 0 20px 30px 20px;
@@ -68,7 +68,6 @@ div.footer {
     font-size: 75%;
     margin-left: 230px; /* Disable if using meny */
 }
-
 div.footer a {
     color: #ffffff;
     text-decoration: underline;
@@ -80,18 +79,18 @@ div.related {
     color: white;
 }
 
-    div.related a {
-        color: white;
-    }
+div.related a {
+    color: white;
+}
 
-    span.locationOfThePage {
-        color: grey;
-        font-size: 100%;
-    }
-	    span.locationOfThePage a {
-	        color: grey;
-	        text-decoration: underline;
-	    }
+span.locationOfThePage {
+    color: grey;
+    font-size: 100%;
+}
+span.locationOfThePage a {
+    color: grey;
+    text-decoration: underline;
+}
 
 div.sphinxsidebar {
 }
@@ -104,7 +103,6 @@ div.sphinxsidebar h3 {
     margin: 0;
     padding: 0;
 }
-
 div.sphinxsidebar h3 a {
     color: white;
 }
@@ -154,7 +152,7 @@ div#sidebarbutton {
         overflow-y: auto;
     }
     div.bodywrapper {
-        margin: 0 0 0 0;
+        margin: 10px 0 0 0;
     }
     div.footer {
         position: relative;
@@ -174,7 +172,7 @@ div#sidebarbutton {
     }
     span.locationOfThePage, div.related, a.forkit {
         display: none;
-        visibility: hidden; 
+        visibility: hidden;
     }
     div.document {
         margin: -10px 0 0 0;
