Remove the « s » 'a:after { content }' for the forkit link.

--- a/.static/forkit.css
+++ b/.static/forkit.css
@@ -8,6 +8,10 @@
 	text-decoration: none;
 	z-index:95;
 }
+a.forkit:after {
+	content: none;
+}
+
 .forkit-curtain {
 	text-align: center;
 	background: #3B5998;
