Improved the look of a ul in the sidebar ul (for local toc).

--- a/.static/classic.css
+++ b/.static/classic.css
@@ -153,6 +153,11 @@ div#sidebarbutton {
         top: 2px;
         text-align: center;
     }
+        div.sphinxsidebar ul ul {
+            list-style-position: inside;
+            text-align: left;
+            margin-left: 15%;
+        }
     div.sidebar {
         float: none;
         position: relative;
