--- a/.static/hacks.css
+++ b/.static/hacks.css
@@ -195,13 +195,13 @@ div.sphinxsidebar {
     /* background: url('//perso.crans.org/besson/_images/.top.png'); */
 }
 
-@media (max-width: 680px) {
-    #scrollUpLeft {
-        left: auto;
-        right: 6px;
-        bottom: 6px;
+    @media (max-width: 680px) {
+        #scrollUpRight {
+            right: auto;
+            left: 6px;
+            bottom: 6px;
+        }
     }
-}
 
 
 /* responsive for font-size. */
