--- a/.static/style.css
+++ b/.static/style.css
@@ -96,7 +96,7 @@ body {
 }
 
 html {
-    font-size: 118.75%;
+    font-size: 140%;
     font-family: Sabon, "Adobe Garamond Pro", Garamond, serif;
 }
 
@@ -118,17 +118,22 @@ div.body h1, h1, div.body h2, h2, div.body h3, h3, div.body h4, h4, div.body h5,
 
 h1, div.body h1 {
     font-weight: 600;
-    font-size: 2em;
+    font-size: 3em;
 }
 
 h2, div.body h2 {
     font-weight: 600;
-    font-size: 1.75em;
+    font-size: 2.5em;
 }
 
 h3, div.body h3 {
     font-weight: 500;
-    font-size: 1.50em;
+    font-size: 2.0em;
+}
+
+h4, div.body h4 {
+    font-weight: 400;
+    font-size: 1.5em;
 }
 
 pre, code {
