--- a/.static/hacks.css
+++ b/.static/hacks.css
@@ -181,7 +181,22 @@ img.languageswitch {
 
 div.sphinxsidebar {
     max-width: 100%;
-    overflow-x: hidden;
+    overflow-x: hidden !important;
+    font-size: 120%;
+    word-wrap: break-word;
+    width: 300px;
+}
+
+div.sphinxsidebar h3 {
+    font-size: 125%;
+}
+
+div.sphinxsidebar h4 {
+    font-size: 110%;
+}
+
+div.sphinxsidebar a {
+    font-size: 85%;
 }
 
 /* Image style for scrollUp jQuery plugin */
