--- a/.static/style.css
+++ b/.static/style.css
@@ -105,38 +105,58 @@ abbr {
     letter-spacing: 0.2pt;
 }
 
-div.body, div.body p, div.body ul, div.body ol, div.body div {
+div.body,
+div.body p,
+div.body ul,
+div.body ol,
+div.body div {
     text-align: justify;
     text-align-last: left;
     text-justify: inter-word;
 }
 
-div.body h1, h1, div.body h2, h2, div.body h3, h3, div.body h4, h4, div.body h5, h5, div.body h6, h6 {
+div.body h1,
+h1,
+div.body h2,
+h2,
+div.body h3,
+h3,
+div.body h4,
+h4,
+div.body h5,
+h5,
+div.body h6,
+h6 {
     font-family: "Cronos Pro", "Century Gothic", Trebuchet, sans;
     line-height: 1;
 }
 
-h1, div.body h1 {
+h1,
+div.body h1 {
     font-weight: 600;
     font-size: 2.5em;
 }
 
-h2, div.body h2 {
+h2,
+div.body h2 {
     font-weight: 600;
     font-size: 2.25em;
 }
 
-h3, div.body h3 {
+h3,
+div.body h3 {
     font-weight: 500;
     font-size: 2.0em;
 }
 
-h4, div.body h4 {
+h4,
+div.body h4 {
     font-weight: 400;
     font-size: 1.5em;
 }
 
-pre, code {
+pre,
+code {
     font-family: Hack, "DejaVu Sans Mono", "Bitstream Vera Sans Mono", monospace;
     -webkit-hyphens: none !important;
     -moz-hyphens: none !important;
@@ -145,12 +165,22 @@ pre, code {
     hyphens: none !important;
 }
 
-em, i, cite {
+em,
+i,
+cite {
     font-style: italic;
     line-height: 1;
 }
 
-em em, em i, em cite, i em, i i, i cite, cite em, cite i, cite cite {
+em em,
+em i,
+em cite,
+i em,
+i i,
+i cite,
+cite em,
+cite i,
+cite cite {
     font-style: normal;
 }
 
@@ -164,4 +194,66 @@ p {
     -ms-font-feature-settings: "liga", "onum", "pnum", "kern";
     -o-font-feature-settings: "liga", "onum", "pnum", "kern";
     font-feature-settings: "liga", "onum", "pnum", "kern"
+}
+
+
+div.footer, .footer {
+    top: 10px;
+    padding-right: 10px;
+}
+
+@media screen and (max-width: 875px) {
+    div.document {
+        width: 100%;
+    }
+    div.documentwrapper {
+        margin-left: 0;
+        margin-top: 0;
+        margin-right: 0;
+        margin-bottom: 0;
+    }
+    div.bodywrapper {
+        margin-top: 0;
+        margin-right: 0;
+        margin-bottom: 0;
+        margin-left: 0;
+    }
+    div.sphinxsidebar {
+        display: inline;
+        width: 100%;
+        max-width: 100%;
+        position: relative;
+        top: 2px;
+        text-align: center;
+        float: none;
+        background: #FFF;
+    }
+    ul {
+        margin-left: 0;
+    }
+    li > ul {
+        /* Matches the 30px from the "ul, ol" selector above */
+        margin-left: 30px;
+    }
+    .document {
+        width: auto;
+    }
+    div.footer, .footer {
+        width: 90%;
+        top: 10px;
+        display: inline;
+        text-align: center;
+        margin-right: auto;
+        margin-left: auto;
+        padding: 0 0 0 0;
+    }
+    div.supportBadges {
+        text-align: center;
+    }
+    .bodywrapper {
+        margin: 0;
+    }
+    .github {
+        display: none;
+    }
 }
