--- a/.static/style.css
+++ b/.static/style.css
@@ -105,6 +105,13 @@ abbr {
     letter-spacing: 0.2pt;
 }
 
+body, p, a, em, i, ul, ol, li, textarea, h1, h2, h3, h4, h5, h6 {
+    -webkit-font-feature-settings: "liga" on, "hlig" on, "hist" on, "dlig" on, "zero" on, "calt" on, "swsh" on, "kern" on, "locl" on;
+    -moz-font-feature-settings: "liga" on, "hlig" on, "hist" on, "dlig" on, "zero" on, "calt" on, "swsh" on, "kern" on, "locl" on;
+    -ms-font-feature-settings: "liga" on, "hlig" on, "hist" on, "dlig" on, "zero" on, "calt" on, "swsh" on, "kern" on, "locl" on;
+    font-feature-settings: "liga" on, "hlig" on, "hist" on, "dlig" on, "zero" on, "calt" on, "swsh" on, "kern" on, "locl" on;
+}
+
 div.body,
 div.body p,
 div.body ul,
